--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <header id="header" class="fixed-top" style="background-color: black;">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">My Eportfolio</a></h1>
+      <h1 class="logo"><a href="index.html">My e-Portfolio</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -115,7 +115,7 @@
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Danilo De Sousa</span></p>
-                        <p><span class="title-s">Profile: </span> <span>Business and technology consultant</span></p>
+                        <p><span class="title-s">Learning activities from my E-Portfolio based on work done in the MSc Artificial Intelligence programme</span></p>
                         
                       </div>
                     </div>
