--- a/index.html
+++ b/index.html
@@ -205,6 +205,27 @@
             </div>
           </div>
 
+          <div class="col-md-4">
+            <div class="work-box">
+               
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h5 >Collaborative Discussion 2</h5>
+                    <div class="w-more">
+                      <span class="w-ctegory">Legal and Ethical views on ANN applications</span>  
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="04-collaborative-discussion-2.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </section><!-- End Portfolio Section -->
