--- a/07-cnn-model-activity.html
+++ b/07-cnn-model-activity.html
@@ -57,7 +57,7 @@
     <div class="hero-content display-table">
       <div class="table-cell">
         <div class="container">
-          <h2 class="hero-title mb-4">Jaccard Coefficient Calculations</h2>
+          <h2 class="hero-title mb-4">CNN Model Activity</h2>
 
         </div>
       </div>
@@ -75,7 +75,16 @@
 
 
           <div class="col-lg-12">
+            <div class="portfolio-info">
+              <h3>Learning Outcomes</h3>
+
              
+              <ul>
+                <li> Articulate the legal, social, ethical and professional issues faced by machine learning professionals. </li>
+                <li> Understand the applicability and challenges associated with different datasets for the use of machine learning algorithms. </li>
+              </ul>
+          
+            </div>
             <div class="portfolio-description">
               <table class="table table-bordered" id="deadlinedetails">
                 <thead>
