--- a/index.html
+++ b/index.html
@@ -226,6 +226,50 @@
             </div>
           </div>
 
+
+          <div class="col-md-4">
+            <div class="work-box">
+               
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h5 >Activation Functions</h5>
+                    <div class="w-more">
+                      <span class="w-ctegory">Aspects of artificial neural network, like activation function</span>  
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="05-perceptron-activities.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="work-box">
+               
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h5 >Cost Functions, Gradient Descent and  Learning Rate</h5>
+                    <div class="w-more">
+                      <span class="w-ctegory">Aspects of artificial neural network, like Cost Functions, Gradient Descent and  Learning Rate</span>  
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="06-gradient-cost-function.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
         </div>
       </div>
     </section><!-- End Portfolio Section -->
