--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> 
 
           <div class="col-md-4">
             <div class="work-box">
@@ -262,6 +262,28 @@
                   <div class="col-sm-4">
                     <div class="w-like">
                       <a href="06-gradient-cost-function.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="col-md-4">
+            <div class="work-box">
+               
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h5 >Convolutional neural network Model</h5>
+                    <div class="w-more">
+                      <span class="w-ctegory">Understand CNN</span>  
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="07-cnn-model-activity.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
