--- a/02-correlation-and-regression.html
+++ b/02-correlation-and-regression.html
@@ -70,12 +70,75 @@
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
 
-        <div> 
+        <div>
           <div class="col-lg-12">
-             
+
             <br class="portfolio-description">
-            <h2>The impact of industry 4.0 on Agriculture</h2>
-             
+            <p>
+              Correlation and regression are two statistical methods used to measure and analyze the relationship
+              between variables. While they are related concepts, they serve different purposes and are applied in
+              different contexts.
+            </p>
+
+            <p>
+              Correlation: Correlation measures the strength and direction of the linear relationship between two
+              continuous variables. It provides insight into how changes in one variable are associated with changes in
+              another. Common correlation coefficients include Pearson correlation coefficient (for linear
+              relationships), Spearman's rank correlation coefficient (for monotonic relationships), and Kendall's tau
+              (also for monotonic relationships).
+
+            </p>
+
+            <p>
+              Pearson Correlation Coefficient (r): Measures the linear relationship between two variables. It ranges
+              from -1 to 1, where:
+              r=1: Perfect positive correlation
+              r=−1: Perfect negative correlation
+              r=0: No linear correlation
+              Spearman's Rank Correlation Coefficient (ρ): Measures the strength and direction of the monotonic
+              relationship between two variables. It is less sensitive to outliers and non-linear relationships compared
+              to Pearson correlation.
+            </p>
+
+            <p>
+              Regression: Regression analysis is a statistical method used to model the relationship between a dependent
+              variable (target) and one or more independent variables (predictors). It estimates the parameters of a
+              linear or non-linear function that best describes how the independent variables influence the dependent
+              variable. The most common type of regression is linear regression, but there are also non-linear
+              regression models.
+            </p>
+
+            <p>
+              Linear Regression: Fits a linear function to the data to predict the value of the dependent variable based
+              on the values of the independent variables. The relationship between the variables is expressed as:
+              𝑌=𝛽0+𝛽1𝑋1+𝛽2𝑋2+…+𝛽𝑛𝑋𝑛+𝜀
+              where
+              Y is the dependent variable,
+              𝑋1, 𝑋2,…,𝑋𝑛 are the independent variables,
+              𝛽0, 𝛽1, …,𝛽𝑛 are the regression coefficients, and ε is the error term.
+            </p>
+
+            <p>
+              Non-linear Regression: Fits a non-linear function to the data. The relationship between the variables may
+              follow a polynomial, exponential, logarithmic, or other non-linear forms.
+              Regression analysis can be used for prediction, inference, and understanding the relationship between
+              variables. It provides insights into how changes in the independent variables affect the dependent
+              variable.
+            </p>
+
+            <p>
+
+            </p>
+            <br></br>
+            <p>
+
+              <b> References</b>
+            </p>
+            <p>
+              SCrawford, S. L. (2006) Correlation and Regression.Circulation logo 114(19):2083–2088. DOI:
+              https://doi.org/10.1161/CIRCULATIONAHA.105.586495
+            </p>
+
           </div>
         </div>
 
