--- a/index.html
+++ b/index.html
@@ -291,6 +291,27 @@
             </div>
           </div>
 
+          <div class="col-md-4">
+            <div class="work-box">
+               
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h5 >Model Evaluation</h5>
+                    <div class="w-more">
+                      <span class="w-ctegory">Understand Model Evaluation</span>  
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="08-model-selection-and-evaluation.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
 
         </div>
       </div>
