--- a/01-collaborative-discussion-1.html
+++ b/01-collaborative-discussion-1.html
@@ -82,7 +82,7 @@
     <div class="hero-content display-table">
       <div class="table-cell">
         <div class="container">
-          <h2 class="hero-title mb-4">Collaborative Discussion 1 <p>The 4th Industrial Revolution</p>
+          <h2 class="hero-title mb-4">Collaborative Discussion<p>The 4th Industrial Revolution</p>
           </h2>
 
         </div>
