--- a/04-collaborative-discussion-2.html
+++ b/04-collaborative-discussion-2.html
@@ -82,7 +82,7 @@
     <div class="hero-content display-table">
       <div class="table-cell">
         <div class="container">
-          <h2 class="hero-title mb-4">Collaborative Discussion 2 <p>Legal and Ethical views on ANN applications</p>
+          <h2 class="hero-title mb-4">Collaborative Discussion<p>Legal and Ethical views on ANN applications</p>
           </h2>
 
         </div>
