--- a/10-agent-communication-languages.html
+++ b/10-agent-communication-languages.html
@@ -96,28 +96,58 @@
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
 
-        <div> 
+        <div>
           <div class="col-lg-12">
-             
+
             <br class="portfolio-description">
             <h2>The Use of Agent Communication Languages: Advantages and Disadvantages</h2>
             <p>
-              Agent communication languages (ACLs), such as knowledge query and manipulation language (KQML), represent a fundamental element in the domain of artificial intelligence and multi-agent systems. These languages facilitate communication between autonomous agents, allowing them to share information, coordinate actions and negotiate with each other (Singh, 1998). Using ACLs like KQML offers several advantages, but it also has notable disadvantages. Comparing these languages to traditional method invocations in programming languages like Python or Java further elucidates their unique characteristics and utility.
+              Agent communication languages (ACLs), such as knowledge query and manipulation language (KQML), represent
+              a fundamental element in the domain of artificial intelligence and multi-agent systems. These languages
+              facilitate communication between autonomous agents, allowing them to share information, coordinate actions
+              and negotiate with each other (Singh, 1998). Using ACLs like KQML offers several advantages, but it also
+              has notable disadvantages. Comparing these languages to traditional method invocations in programming
+              languages like Python or Java further elucidates their unique characteristics and utility.
             </p>
             <p>
-              One of the advantages of using ACLs like KQML is the high level of abstraction they provide. KQML was designed to be a protocol for exchanging information and knowledge between agents, which allows developers to focus on the logic and rules of communication rather than the low-level details of data exchange. This abstraction facilitates the development of complex multi-agent systems, where agents can dynamically discover and interact with each other (James, 2002). For example, agents can consult information, negotiate tasks and even delegate responsibilities in an integrated way. This capability is particularly beneficial in distributed systems and environments where agents operate autonomously and asynchronously (Cardoso & Fernando, 2021).
+              One of the advantages of using ACLs like KQML is the high level of abstraction they provide. KQML was
+              designed to be a protocol for exchanging information and knowledge between agents, which allows developers
+              to focus on the logic and rules of communication rather than the low-level details of data exchange. This
+              abstraction facilitates the development of complex multi-agent systems, where agents can dynamically
+              discover and interact with each other (James, 2002). For example, agents can consult information,
+              negotiate tasks and even delegate responsibilities in an integrated way. This capability is particularly
+              beneficial in distributed systems and environments where agents operate autonomously and asynchronously
+              (Cardoso & Fernando, 2021).
             </p>
 
             <p>
-              However, using KQML has its own disadvantages. One of the main challenges is the complexity of implementing and maintaining KQML-based systems. The need to analyze and understand the semantic content of messages requires robust natural language processing and reasoning capabilities, which can be computationally intensive and difficult to develop. Additionally, the overhead associated with encoding and decoding messages in KQML can lead to performance inefficiencies, especially in systems that require high-speed, low-latency communication.
+              However, using KQML has its own disadvantages. One of the main challenges is the complexity of
+              implementing and maintaining KQML-based systems. The need to analyze and understand the semantic content
+              of messages requires robust natural language processing and reasoning capabilities, which can be
+              computationally intensive and difficult to develop. Additionally, the overhead associated with encoding
+              and decoding messages in KQML can lead to performance inefficiencies, especially in systems that require
+              high-speed, low-latency communication.
             </p>
 
             <p>
-              In contrast to ACLs, method invocation in Python or Java, although simpler and more straightforward, operates at a lower level of abstraction. Method calls are explicit and tightly coupled to the specific classes and objects involved. This makes method invocation highly efficient and straightforward in scenarios where interactions are predefined and the system is relatively static. However, it can become complicated in dynamic environments where flexibility and adaptability are required. Unlike KQML, traditional method invocation does not inherently support dynamic service discovery and binding, necessitating additional layers of code to handle such complexities (Jaleel at el, 2020).
+              In contrast to ACLs, method invocation in Python or Java, although simpler and more straightforward,
+              operates at a lower level of abstraction. Method calls are explicit and tightly coupled to the specific
+              classes and objects involved. This makes method invocation highly efficient and straightforward in
+              scenarios where interactions are predefined and the system is relatively static. However, it can become
+              complicated in dynamic environments where flexibility and adaptability are required. Unlike KQML,
+              traditional method invocation does not inherently support dynamic service discovery and binding,
+              necessitating additional layers of code to handle such complexities (Jaleel at el, 2020).
             </p>
 
             <p>
-              Using agent communication languages like KQML has significant advantages and notable disadvantages. ACLs stand out for providing standardized, high-level and flexible communication protocols, suitable for dynamic and complex multi-agent systems. However, they also introduce complexity, performance overhead, and interoperability challenges that can complicate their implementation and use. When compared to method invocation in Python or Java, ACLs offer greater flexibility and support for asynchronous communication and context management, but at the cost of simplicity and efficiency. Ultimately, the choice between using an ACL or a traditional method invocation depends on the specific requirements and constraints of the system being developed.
+              Using agent communication languages like KQML has significant advantages and notable disadvantages. ACLs
+              stand out for providing standardized, high-level and flexible communication protocols, suitable for
+              dynamic and complex multi-agent systems. However, they also introduce complexity, performance overhead,
+              and interoperability challenges that can complicate their implementation and use. When compared to method
+              invocation in Python or Java, ACLs offer greater flexibility and support for asynchronous communication
+              and context management, but at the cost of simplicity and efficiency. Ultimately, the choice between using
+              an ACL or a traditional method invocation depends on the specific requirements and constraints of the
+              system being developed.
             </p>
 
 
@@ -127,18 +157,23 @@
               <b> References</b>
             </p>
             <p>
-              Cardoso, R.C. & Fernando, A. (2021) A Review of Agent-Based Programming for Multi-Agent Systems.Computers  10(2):16. DOI: https://doi.org/10.3390/computers10020016
+              Cardoso, R.C. & Fernando, A. (2021) A Review of Agent-Based Programming for Multi-Agent Systems.Computers
+              10(2):16. DOI: https://doi.org/10.3390/computers10020016
             </p>
             <p>
-              Jaleel, H. Q., Stephan, J. J. & Naji, S. A. (2020) Multi-Agent Systems: A Review Study. Ibn Al Haitham Journal for Pure and Applied Science. Available from: https://www.iasj.net/iasj/download/205c068a4b410d72 [Accessed 15 May 2024]  
+              Jaleel, H. Q., Stephan, J. J. & Naji, S. A. (2020) Multi-Agent Systems: A Review Study. Ibn Al Haitham
+              Journal for Pure and Applied Science. Available from: https://www.iasj.net/iasj/download/205c068a4b410d72
+              [Accessed 15 May 2024]
             </p>
             <p>
-              James, O. (2002) Objects and Agents Compared. Journal of Object Technology 1(1):41-53. Available from: http://www.jot.fm/issues/issue_2002_05/column4 [Accessed 16 May 2024]  
+              James, O. (2002) Objects and Agents Compared. Journal of Object Technology 1(1):41-53. Available from:
+              http://www.jot.fm/issues/issue_2002_05/column4 [Accessed 16 May 2024]
             </p>
             <p>
-              Singh, M.P. 1998 Agent Communication Languages: Rethinking the Principles. Available from: https://www.csc2.ncsu.edu/faculty/mpsingh/papers/mas/computer-acl-98.pdf [Accessed 15 May 2024]  
+              Singh, M.P. 1998 Agent Communication Languages: Rethinking the Principles. Available from:
+              https://www.csc2.ncsu.edu/faculty/mpsingh/papers/mas/computer-acl-98.pdf [Accessed 15 May 2024]
             </p>
-             
+
 
           </div>
         </div>
