--- a/index.html
+++ b/index.html
@@ -376,6 +376,29 @@
             </div>
           </div>
 
+          <div class="col-md-4">
+            <div class="work-box">
+               
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h5 >Collaborative Discussion</h5>
+                    <div class="w-more">
+                      <span class="w-ctegory">Ethical impact of deep learning models</span>  
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="12-deep-learning-models.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
 
         </div>
       </div>
