--- a/index.html
+++ b/index.html
@@ -397,6 +397,27 @@
             </div>
           </div>
 
+          <div class="col-md-4">
+            <div class="work-box">
+               
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h5 >Collaborative Discussion</h5>
+                    <div class="w-more">
+                      <span class="w-ctegory"> Ethical Code Application in Medical Implant Risk Analysis</span>  
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="13-ethical-code-application.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
 
 
 
