--- a/index.html
+++ b/index.html
@@ -419,6 +419,28 @@
           </div>
 
 
+          <div class="col-md-4">
+            <div class="work-box">
+               
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h5 >Collaborative Discussion</h5>
+                    <div class="w-more">
+                      <span class="w-ctegory"> Case Study on Accuracy of Information</span>  
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="14-accuracy-of-information.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
 
 
         </div>
